--- a/fun-joy.html
+++ b/fun-joy.html
@@ -14,7 +14,7 @@
         <nav class="navbar">
             <div class="nav-container">
                  <div class="logo">
-    <img src="images/venturelogo.jpg" alt="RPG Ventures Logo">
+    <img src="./images/venturelogo.jpg" alt="RPG Ventures Logo">
     <div class="logo-text">
         <!-- <h1>RPG Ventures</h1> -->
         <!-- <p>HR Solutions</p> -->
@@ -80,7 +80,7 @@
                         <img src="/placeholder.svg?height=300&width=400" alt="Birthday Bash 4" class="gallery-image">
                     </div>
                     <div class="gallery-item">
-                        <img src="images/img3.jpeg" alt="Birthday Bash 5" class="gallery-image">
+                        <img src="./images/img3.jpeg" alt="Birthday Bash 5" class="gallery-image">
                     </div>
                 </div>
             </div>
