--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="navbar">
             <div class="nav-container">
               <div class="logo">
-    <img src="images/venturelogo.jpg" alt="RPG Ventures Logo">
+    <img src="./images/venturelogo.jpg" alt="RPG Ventures Logo">
     <div class="logo-text">
         <!-- <h1>RPG Ventures</h1> -->
         <!-- <p>HR Solutions</p> -->
@@ -62,7 +62,7 @@
     </div>
 </div>
             <div class="slide">
-                <img src="images/img4.jpg" alt="Campus Placements">
+                <img src="./images/img4.jpg" alt="Campus Placements">
                 <div class="slide-content">
                     <h1>CPNAN</h1>
                     <h3>Campus Placements National Assistance Network</h3>
@@ -70,21 +70,21 @@
                 </div>
             </div>
             <div class="slide">
-                <img src="images/img3.jpeg" alt="Philosophy">
+                <img src="./images/img3.jpeg" alt="Philosophy">
                 <div class="slide-content">
                     <h1>Philosophy</h1>
                     <h3>To be the best in all things we do with respect & care for all stakeholders</h3>
                 </div>
             </div>
             <div class="slide">
-                <img src="images/img2.jpg" alt="Mission">
+                <img src="./images/img2.jpg" alt="Mission">
                 <div class="slide-content">
                     <h1>Mission</h1>
                     <h3>Understanding Client requirements and fulfilling them in the most efficient ways.</h3>
                 </div>
             </div>
             <div class="slide">
-                <img src="images/img6.jpg" alt="Core Values">
+                <img src="./images/img6.jpg" alt="Core Values">
                 <div class="slide-content">
                     <h1>Our Core Values</h1>
                     <h3>Respect for Work, Respect for Time, Respect for Stakeholders</h3>
@@ -119,8 +119,8 @@
                     </ul>
                 </div>
                 <div class="history-images">
-                    <img src="images/img5.jpg" alt="RPG Ventures Office">
-                    <img src="images/img6.jpg" alt="Team Meeting">
+                    <img src="./images/img5.jpg" alt="RPG Ventures Office">
+                    <img src="./images/img6.jpg" alt="Team Meeting">
                 </div>
             </div>
         </div>
@@ -195,7 +195,7 @@
                     <p>Besides all-round the year support for issues to be handled in business and life to make it effective and fulfilling personnel and professional journey.</p>
                 </div>
                 <div class="methodology-image">
-                    <img src="images/ourmethodology.jpg" alt="Working Methodology">
+                    <img src="./images/ourmethodology.jpg" alt="Working Methodology">
                 </div>
             </div>
         </div>
@@ -207,25 +207,25 @@
             <h2>Our Clients</h2>
             <div class="clients-grid">
                 <div class="client-logo">
-                    <img src="images/amey.png" alt="Client 1">
+                    <img src="./images/amey.png" alt="Client 1">
                 </div>
                 <div class="client-logo">
-                    <img src="images/forties.jpg" alt="Client 2">
+                    <img src="./images/forties.jpg" alt="Client 2">
                 </div>
                 <div class="client-logo">
-                    <img src="images/rainbow.jpg" alt="Client 3">
+                    <img src="./images/rainbow.jpg" alt="Client 3">
                 </div>
                 <div class="client-logo">
-                    <img src="images/thyrocare.webp" alt="Client 4">
+                    <img src="./images/thyrocare.webp" alt="Client 4">
                 </div>
                 <div class="client-logo">
-                    <img src="images/toppr.jpg" alt="Client 5">
+                    <img src="./images/toppr.jpg" alt="Client 5">
                 </div>
                 <div class="client-logo">
-                    <img src="images/star.png" alt="Client 6">
+                    <img src="./images/star.png" alt="Client 6">
                 </div>
                 <div class="client-logo">
-                    <img src="images/nexa.png" alt="Client 7">
+                    <img src="./images/nexa.png" alt="Client 7">
                 </div>
             </div>
         </div>
