--- a/clients.html
+++ b/clients.html
@@ -13,7 +13,7 @@
         <nav class="navbar">
             <div class="nav-container">
                <div class="logo">
-    <img src="images/venturelogo.jpg" alt="RPG Ventures Logo">
+    <img src="./images/venturelogo.jpg" alt="RPG Ventures Logo">
     <div class="logo-text">
         <!-- <h1>RPG Ventures</h1> -->
         <!-- <p>HR Solutions</p> -->
@@ -401,17 +401,17 @@
     <section class="clients-logos">
         <div class="container">
             <div class="logos-grid">
-                <img src="images/blue dart.jpg" alt="Blue Dart">
-                <img src="images/toppr.jpg" alt="Toppr">
-                <img src="images/nexa.png" alt="Nexa">
-                <img src="images/zopper.png" alt="Zopper">
-                <img src="images/asianheart.png" alt="Asian Heart Institute">
-                <img src="images/abec.png" alt="ABEC">
-                <img src="images/ayushanatural.png" alt="Ayushakti">
-                <img src="images/enjoy.png" alt="Enjoy">
-                <img src="images/ceasefire.png" alt="Ceasefire">
-                <img src="images/amey.png" alt="amey">
-                <img src="images/forties.jpg" alt="Fortis Healthcare">
+                <img src="./images/blue dart.jpg" alt="Blue Dart">
+                <img src="./images/toppr.jpg" alt="Toppr">
+                <img src="./images/nexa.png" alt="Nexa">
+                <img src="./images/zopper.png" alt="Zopper">
+                <img src="./images/asianheart.png" alt="Asian Heart Institute">
+                <img src="./images/abec.png" alt="ABEC">
+                <img src="./images/ayushanatural.png" alt="Ayushakti">
+                <img src="./images/enjoy.png" alt="Enjoy">
+                <img src="./images/ceasefire.png" alt="Ceasefire">
+                <img src="./images/amey.png" alt="amey">
+                <img src="./images/forties.jpg" alt="Fortis Healthcare">
                 <!-- Add all remaining logos as per screenshot -->
             </div>
         </div>
